--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.7.3",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
