--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.7.3",
     "mysql2": "^2.3.3",
@@ -45,6 +46,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
